force-app/main/default/objects/Salary_Distribution__c/Salary_Distribution__c.object-meta.xml
<CustomObject>
    <description>Distribution of the Monthly Salary</description>
    <label>Salary Distribution</label>
    <nameField>
        <label>Salary Distribution Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Salary Distributions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>