force-app/main/default/objects/Salary_Distribution__c/fields/Amount__c.field-meta.xml
<CustomField>
    <fullName>Amount__c</fullName>
    <description>Amount of Salary</description>
    <inlineHelpText>Enter the Salary Amount for that Month</inlineHelpText>
    <label>Amount</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>