force-app/main/default/objects/Salary_Distribution__c/fields/Bank_Extras__c.field-meta.xml
<CustomField>
    <fullName>Bank_Extras__c</fullName>
    <description>Extra amount which remains in Bank</description>
    <formula>Amount__c -  ROUND( Amount__c ,3)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Amount in Bank which is treated as Bank Charges</inlineHelpText>
    <label>Bank Extras</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>