force-app/main/default/objects/Salary_Distribution__c/fields/Family_Reserve__c.field-meta.xml
<CustomField>
    <fullName>Family_Reserve__c</fullName>
    <description>Reserve for Family</description>
    <formula>2000</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Reserve for Family</inlineHelpText>
    <label>Family Reserve</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>