force-app/main/default/objects/Salary_Distribution__c/fields/Final_Amount_Remaining__c.field-meta.xml
<CustomField>
    <fullName>Final_Amount_Remaining__c</fullName>
    <description>Total Amount Remaining for the Month</description>
    <formula>Amount__c  -   Bank_Extras__c  - Yearly_Reserve__c  -  Monthly_Reserve__c  -  Family_Reserve__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Total Amount Remaining for the Month</inlineHelpText>
    <label>Final Amount Remaining</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>