force-app/main/default/objects/Salary_Distribution__c/fields/Formula__c.field-meta.xml
<CustomField>
    <fullName>Formula__c</fullName>
    <formula>Amount__c  -  FLOOR(Amount__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Formula</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>