force-app/main/default/objects/Salary_Distribution__c/fields/Month_and_Year__c.field-meta.xml
<CustomField>
    <fullName>Month_and_Year__c</fullName>
    <description>Month and Year for the Salary Distribution</description>
    <inlineHelpText>Select the Month and Year for the Salary Distribution</inlineHelpText>
    <label>Month and Year</label>
    <required>true</required>
    <type>Date</type>
</CustomField>