force-app/main/default/objects/Salary_Distribution__c/fields/Yearly_Reserve__c.field-meta.xml
<CustomField>
    <fullName>Yearly_Reserve__c</fullName>
    <description>Year wise Reserve</description>
    <formula>( Amount__c  * 20)/100</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Create a Reserve Yearwise</inlineHelpText>
    <label>Yearly Reserve</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>