force-app/main/default/objects/Salary_Distribution__c/listViews/Created_date.listView-meta.xml
<ListView>
    <fullName>Created_date</fullName>
    <columns>NAME</columns>
    <columns>Amount__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Monthly_Reserve__c</columns>
    <columns>Yearly_Reserve__c</columns>
    <columns>Family_Reserve__c</columns>
    <columns>Final_Amount_Remaining__c</columns>
    <columns>Bank_Extras__c</columns>
    <filterScope>Mine</filterScope>
    <label>Created date</label>
</ListView>